[gd_scene load_steps=11 format=2]

[ext_resource path="res://models/laundry_holder/laundry_holder.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/customers/tutorial_mom/Female 25-1.png" type="Texture" id=2]
[ext_resource path="res://characters/customers/tutorial_mom/mom.gd" type="Script" id=3]
[ext_resource path="res://characters/customers/base_customer/bumper.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 29.064

[sub_resource type="Animation" id=6]
resource_name = "appear"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.775, 1.2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "stairs_down"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 7, 8, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.805668, -1.5851 ), Vector2( 2.77524, 1.21113 ), Vector2( 0.805668, -1.5851 ), Vector2( 2.77524, 1.21113 ), Vector2( 0.805668, -1.5851 ), Vector2( 2.77524, 1.21113 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "stairs_up"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 4, 5, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bumper/HandPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2.75685, -3.99423 ), Vector2( 4.7789, -1.16126 ), Vector2( -2.75685, -3.99423 ), Vector2( 4.7789, -1.16126 ), Vector2( -2.75685, -3.99423 ), Vector2( 4.7789, -1.16126 ) ]
}

[node name="Mom" type="Node2D" groups=[
"customers",
]]
position = Vector2( -1.26134, -1.26134 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.26135, -31.9541 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 2, 0 )
hframes = 3
vframes = 4
frame = 7

[node name="Bumper" parent="." instance=ExtResource( 1 )]
position = Vector2( 7.42407, -5.07996 )
script = ExtResource( 4 )
description = "Mom's the best! She's always giving me laundry."

[node name="HandPos" type="Node2D" parent="Bumper"]
position = Vector2( 2.775, 1.2 )
scale = Vector2( 0.75, 0.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumper"]
position = Vector2( -5.94909, -23.3917 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 6 )
anims/idle = SubResource( 5 )
anims/shake = SubResource( 2 )
anims/stairs_down = SubResource( 3 )
anims/stairs_up = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="disallowed_customer_action" from="Bumper" to="." method="_on_Bumper_disallowed_customer_action"]
[connection signal="modulate" from="Bumper" to="." method="_on_Bumper_modulate"]
[connection signal="released" from="Bumper" to="." method="_on_Bumper_released"]
[connection signal="returned" from="Bumper" to="." method="_on_Bumper_returned"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
